додавання js коду

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </li>
           </ul>
         </address>
-        <button class="menu-open-btn">
+        <button class="menu-open-btn" data-menu-open>
           <svg width="24" height="24">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
@@ -68,7 +68,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button">Order Service</button>
+          <button type="button" class="hero-button" data-modal-open>Order Service</button>
         </div>
       </section>
       <!-- about us section -->
@@ -715,9 +715,9 @@
       </div>
     </footer>
     <!--modal window-->
-    <div class="backdrop">
+    <div class="backdrop" data-modal>
       <div class="modal-window">
-        <button class="modal-btn" type="button" aria-label="modal close button">
+        <button class="modal-btn" type="button" aria-label="modal close button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-x-close"></use>
           </svg>
@@ -808,8 +808,8 @@
       </div>
     </div>
     <!--mobile menu-->
-          <div class="mobile-menu">
-            <button class="menu-close-btn">
+          <div class="mobile-menu" data-menu>
+            <button class="menu-close-btn" data-menu-close>
               <svg width="8" height="8">
                 <use href="./images/icons.svg#icon-x-close"></use>
               </svg>
@@ -868,5 +868,7 @@
               </div>
             </div>
           </div>
+          <script src="./menu.js"></script>
+          <script src="./modal.js"></script>
   </body>
 </html>
